--- a/views/business/goods-detail.html
+++ b/views/business/goods-detail.html
@@ -33,9 +33,9 @@
                     <div class="layui-inline">
                         <label class="layui-form-label">物品类型</label>
                         <div class="layui-input-inline">
-                            <select name="type" lay-filter="" readonly>
-                                <option value="0">原材料</option>
-                                <option value="1">成品</option>
+                            <select name="type" lay-filter="" id = "goodsType">
+                                <option value="1">原材料</option>
+                                <option value="2">成品</option>
                             </select>
                         </div>
                     </div>
