--- a/views/business/goods-list.html
+++ b/views/business/goods-list.html
@@ -116,10 +116,7 @@
                         var iframeWin = window[layero.find('iframe')[0]['name']]; //得到iframe页的窗口对象，执行iframe页的方法：iframeWin.method();
                         body.find('input[name="goodsName"]').val(data.goodsName);
                         body.find('input[name="goodsModel"]').val(data.goodsModel);
-                        //body.find('select[name="type"]').find("option[text='" + data.type + "']").attr("selected",true);
-                        body.find("select").next().find('div input').val("成品");;
-                        body.find("select").next().find('dl dd[lay-value='+data.type+']').addClass("layui-this");;
-                        body.find('select[name="type"]').val(data.type);
+                        body.find("#goodsType").val(data.type);
                         body.find('input[name="color"]').val(data.color);
                         body.find('input[name="num"]').val(data.num);
                         body.find('input[name="unit"]').val(data.unit);
