--- a/views/system/user-add.html
+++ b/views/system/user-add.html
@@ -68,7 +68,7 @@
                 </div>
 
                 <div class="layui-form-item layui-form-text">
-                    <label class="layui-form-label">普通文本域</label>
+                    <label class="layui-form-label">备注</label>
                     <div class="layui-input-block">
                         <textarea name="remarks" placeholder="请输入内容" class="layui-textarea"></textarea>
                     </div>
